feat: Migrate production deployment from VM to Cloud Run
- Update deploy-backend.yml to support main branch → Production Cloud Run
- Update deploy-frontend.yml to support main branch → Production Cloud Run
- Deprecate deploy-vm-prod.yml (manual trigger only)
- Configure production-specific resources (512Mi memory, 1 CPU)
- Prepare for domain migration from VM to Cloud Run

This change enables zero-downtime migration from VM to Cloud Run.

--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -1,15 +1,16 @@
 name: Deploy Backend (Cloud Run)
 
-# 🎯 NEW STRATEGY: Deploy to Cloud Run for staging/other branches
-# 📝 Main branch → VM (see deploy-vm-prod.yml)
-# 📝 Staging/other branches → Cloud Run (this workflow)
+# 🎯 UPDATED STRATEGY: Deploy to Cloud Run for ALL environments
+# 📝 Main branch → Production Cloud Run (primary deployment)
+# 📝 Staging/other branches → Staging Cloud Run
+# 📝 VM deployment is deprecated and will be phased out
 
 on:
   workflow_dispatch:  # 手動觸發
   push:
     branches:
+      - main
       - staging
-      # Note: main branch uses VM deployment (deploy-vm-prod.yml)
     paths:
       # 後端相關檔案
       - 'backend/**'
@@ -87,17 +88,16 @@ jobs:
     - name: Set Environment Variables
       id: env_vars
       run: |
-        # This workflow should NOT run on main branch (VM deployment instead)
+        # Deploy to Production for main branch, Staging for others
         if [[ "${{ github.ref }}" == "refs/heads/main" ]]; then
-          echo "❌ ERROR: This workflow should not run on main branch!"
-          echo "Main branch uses VM deployment (deploy-vm-prod.yml)"
-          exit 1
+          echo "ENV_NAME=production" >> $GITHUB_OUTPUT
+          echo "BACKEND_SERVICE=${{ secrets.PRODUCTION_BACKEND_SERVICE }}" >> $GITHUB_OUTPUT
+          echo "🚀 Deploying to PRODUCTION (Cloud Run)"
+        else
+          echo "ENV_NAME=staging" >> $GITHUB_OUTPUT
+          echo "BACKEND_SERVICE=${{ secrets.STAGING_BACKEND_SERVICE }}" >> $GITHUB_OUTPUT
+          echo "🧪 Deploying to STAGING (Cloud Run)"
         fi
-
-        # Default to staging for all non-main branches
-        echo "ENV_NAME=staging" >> $GITHUB_OUTPUT
-        echo "BACKEND_SERVICE=${{ secrets.STAGING_BACKEND_SERVICE }}" >> $GITHUB_OUTPUT
-        echo "🧪 Deploying to STAGING (Cloud Run)"
 
     - name: Authenticate to Google Cloud
       uses: google-github-actions/auth@v2
@@ -128,16 +128,26 @@ jobs:
     - name: Set Database Environment Variables
       id: db_env
       run: |
-        # Always use staging database (main branch is handled by VM deployment)
-        echo "DATABASE_URL=${{ secrets.STAGING_DATABASE_URL }}" >> $GITHUB_OUTPUT
-        echo "ALEMBIC_DATABASE_URL=${{ secrets.STAGING_DATABASE_POOLER_URL }}" >> $GITHUB_OUTPUT
-        echo "SUPABASE_URL=${{ secrets.STAGING_SUPABASE_URL }}" >> $GITHUB_OUTPUT
-        echo "SUPABASE_KEY=${{ secrets.STAGING_SUPABASE_ANON_KEY }}" >> $GITHUB_OUTPUT
-        echo "JWT_SECRET=${{ secrets.STAGING_JWT_SECRET }}" >> $GITHUB_OUTPUT
-        echo "FRONTEND_URL=${{ secrets.STAGING_FRONTEND_URL }}" >> $GITHUB_OUTPUT
-        # Audio error monitoring always connects to production Supabase
-        echo "PROD_DATABASE_POOLER_URL=${{ secrets.PRODUCTION_DATABASE_POOLER_URL }}" >> $GITHUB_OUTPUT
-        echo "🆓 Using Staging Database"
+        # Use production or staging database based on branch
+        if [[ "${{ github.ref }}" == "refs/heads/main" ]]; then
+          echo "DATABASE_URL=${{ secrets.PRODUCTION_DATABASE_URL }}" >> $GITHUB_OUTPUT
+          echo "ALEMBIC_DATABASE_URL=${{ secrets.PRODUCTION_DATABASE_POOLER_URL }}" >> $GITHUB_OUTPUT
+          echo "SUPABASE_URL=${{ secrets.PRODUCTION_SUPABASE_URL }}" >> $GITHUB_OUTPUT
+          echo "SUPABASE_KEY=${{ secrets.PRODUCTION_SUPABASE_ANON_KEY }}" >> $GITHUB_OUTPUT
+          echo "JWT_SECRET=${{ secrets.PRODUCTION_JWT_SECRET }}" >> $GITHUB_OUTPUT
+          echo "FRONTEND_URL=${{ secrets.PRODUCTION_FRONTEND_URL }}" >> $GITHUB_OUTPUT
+          echo "PROD_DATABASE_POOLER_URL=${{ secrets.PRODUCTION_DATABASE_POOLER_URL }}" >> $GITHUB_OUTPUT
+          echo "🚀 Using Production Database"
+        else
+          echo "DATABASE_URL=${{ secrets.STAGING_DATABASE_URL }}" >> $GITHUB_OUTPUT
+          echo "ALEMBIC_DATABASE_URL=${{ secrets.STAGING_DATABASE_POOLER_URL }}" >> $GITHUB_OUTPUT
+          echo "SUPABASE_URL=${{ secrets.STAGING_SUPABASE_URL }}" >> $GITHUB_OUTPUT
+          echo "SUPABASE_KEY=${{ secrets.STAGING_SUPABASE_ANON_KEY }}" >> $GITHUB_OUTPUT
+          echo "JWT_SECRET=${{ secrets.STAGING_JWT_SECRET }}" >> $GITHUB_OUTPUT
+          echo "FRONTEND_URL=${{ secrets.STAGING_FRONTEND_URL }}" >> $GITHUB_OUTPUT
+          echo "PROD_DATABASE_POOLER_URL=${{ secrets.PRODUCTION_DATABASE_POOLER_URL }}" >> $GITHUB_OUTPUT
+          echo "🧪 Using Staging Database"
+        fi
 
     - name: Build and push backend image
       run: |
@@ -280,7 +290,7 @@ jobs:
         ENV_VARS="$ENV_VARS,REGION=$REGION"
         ENV_VARS="$ENV_VARS,GCS_BUCKET_NAME=duotopia-audio"
 
-        # TapPay 配置（Staging 使用 Production TapPay）
+        # TapPay 配置（環境相關）
         ENV_VARS="$ENV_VARS,TAPPAY_SANDBOX_APP_ID=${{ secrets.TAPPAY_SANDBOX_APP_ID }}"
         ENV_VARS="$ENV_VARS,TAPPAY_SANDBOX_APP_KEY=${{ secrets.TAPPAY_SANDBOX_APP_KEY }}"
         ENV_VARS="$ENV_VARS,TAPPAY_SANDBOX_PARTNER_KEY=${{ secrets.TAPPAY_SANDBOX_PARTNER_KEY }}"
@@ -289,21 +299,33 @@ jobs:
         ENV_VARS="$ENV_VARS,TAPPAY_PRODUCTION_APP_KEY=${{ secrets.TAPPAY_PRODUCTION_APP_KEY }}"
         ENV_VARS="$ENV_VARS,TAPPAY_PRODUCTION_PARTNER_KEY=${{ secrets.TAPPAY_PRODUCTION_PARTNER_KEY }}"
         ENV_VARS="$ENV_VARS,TAPPAY_PRODUCTION_MERCHANT_ID=${{ secrets.TAPPAY_PRODUCTION_MERCHANT_ID }}"
-        ENV_VARS="$ENV_VARS,TAPPAY_ENV=production"  # Staging uses production TapPay
-        ENV_VARS="$ENV_VARS,USE_MOCK_PAYMENT=false"
 
-        # Cron Job 配置 (Staging)
-        ENV_VARS="$ENV_VARS,CRON_SECRET=${{ secrets.STAGING_CRON_SECRET }}"
+        # Environment-specific configuration
+        if [[ "${{ github.ref }}" == "refs/heads/main" ]]; then
+          ENV_VARS="$ENV_VARS,TAPPAY_ENV=production"
+          ENV_VARS="$ENV_VARS,USE_MOCK_PAYMENT=false"
+          ENV_VARS="$ENV_VARS,CRON_SECRET=${{ secrets.PRODUCTION_CRON_SECRET }}"
+          ENV_VARS="$ENV_VARS,ENABLE_PAYMENT=${{ secrets.PRODUCTION_ENABLE_PAYMENT }}"
 
-        # Payment 功能控制 (Staging: 啟用付款功能用於測試)
-        ENV_VARS="$ENV_VARS,ENABLE_PAYMENT=${{ secrets.STAGING_ENABLE_PAYMENT }}"
+          # 💰 Production: 資源配置
+          MIN_INSTANCES=0      # Scale-to-Zero 節省成本
+          MEMORY="512Mi"       # Production 需要更多記憶體
+          CPU="1000m"          # 1 CPU
+          CONCURRENCY=80       # 高併發
+          MAX_INSTANCES=6      # 支援更高流量
+        else
+          ENV_VARS="$ENV_VARS,TAPPAY_ENV=production"  # Staging uses production TapPay
+          ENV_VARS="$ENV_VARS,USE_MOCK_PAYMENT=false"
+          ENV_VARS="$ENV_VARS,CRON_SECRET=${{ secrets.STAGING_CRON_SECRET }}"
+          ENV_VARS="$ENV_VARS,ENABLE_PAYMENT=${{ secrets.STAGING_ENABLE_PAYMENT }}"
 
-        # 💰 成本優化：Staging 環境最小化成本
-        MIN_INSTANCES=0      # Scale-to-Zero 最大化節省成本
-        MEMORY="256Mi"
-        CPU="500m"           # 0.5 CPU
-        CONCURRENCY=1        # CPU < 1 時必須設為 1
-        MAX_INSTANCES=1      # Staging 流量低，降為 1 節省成本
+          # 💰 Staging: 最小化成本
+          MIN_INSTANCES=0      # Scale-to-Zero 最大化節省成本
+          MEMORY="256Mi"
+          CPU="500m"           # 0.5 CPU
+          CONCURRENCY=1        # CPU < 1 時必須設為 1
+          MAX_INSTANCES=1      # Staging 流量低，降為 1 節省成本
+        fi
 
         gcloud run deploy ${{ steps.env_vars.outputs.BACKEND_SERVICE }} \
           --image $REGION-docker.pkg.dev/$PROJECT_ID/$REPOSITORY/${{ steps.env_vars.outputs.BACKEND_SERVICE }}:$GITHUB_SHA \
