chore: Add feat/ branch pattern to per-issue deploy workflow
- Enables preview deployment for feat/issue-* branches
- Allows testing of feat/issue-112-org-hierarchy branch

--- a/.github/workflows/deploy-per-issue.yml
+++ b/.github/workflows/deploy-per-issue.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - 'fix/issue-*'
+      - 'feat/issue-*'
       - 'feature/issue-*'
       - 'claude/issue-*'  # Support @claude created branches
     paths:
