--- a/.github/workflows/deploy-per-issue.yml
+++ b/.github/workflows/deploy-per-issue.yml
@@ -6,7 +6,7 @@ on:
       - 'fix/issue-*'
       - 'feat/issue-*'
       - 'feature/issue-*'
-      - 'claude/issue-*'  # Support @claude created branches
+      - 'claude/issue-*'
     paths:
       - 'frontend/**'
       - 'backend/**'
@@ -15,6 +15,7 @@ on:
 permissions:
   contents: read
   issues: write
+  id-token: write
 
 env:
   PROJECT_ID: duotopia-472708
@@ -31,7 +32,8 @@ jobs:
         id: extract
         run: |
           echo "🔍 DEBUG: Starting extract job"
-          ISSUE_NUM=$(echo "${{ github.ref_name }}" | grep -oE '[0-9]+')
+          # Extract first number after 'issue-' pattern
+          ISSUE_NUM=$(echo "${{ github.ref_name }}" | grep -oP 'issue-\K\d+')
           echo "issue_number=$ISSUE_NUM" >> $GITHUB_OUTPUT
           echo "✅ Issue number: $ISSUE_NUM"
 
@@ -78,8 +80,8 @@ jobs:
 
           echo "🔍 DEBUG: Deploying to Cloud Run"
 
-          # 計算 frontend URL（待 frontend 部署完成後會更新）
-          FRONTEND_URL="https://duotopia-preview-issue-${ISSUE}-frontend-${PROJECT_ID}.${REGION}.run.app"
+          # 使用 placeholder，會在 frontend 部署後更新為實際 URL
+          FRONTEND_URL="https://placeholder-will-be-updated.run.app"
 
           # 環境變數設定（使用 staging 的配置）
           ENV_VARS="DATABASE_URL=${{ secrets.STAGING_DATABASE_URL }}"
@@ -106,6 +108,7 @@ jobs:
           ENV_VARS="$ENV_VARS,GCP_PROJECT_ID=${PROJECT_ID}"
           ENV_VARS="$ENV_VARS,REGION=${REGION}"
           ENV_VARS="$ENV_VARS,GCS_BUCKET_NAME=duotopia-audio"
+          ENV_VARS="$ENV_VARS,USE_GCS_STORAGE=true"
           ENV_VARS="$ENV_VARS,TAPPAY_SANDBOX_APP_ID=${{ secrets.TAPPAY_SANDBOX_APP_ID }}"
           ENV_VARS="$ENV_VARS,TAPPAY_SANDBOX_APP_KEY=${{ secrets.TAPPAY_SANDBOX_APP_KEY }}"
           ENV_VARS="$ENV_VARS,TAPPAY_SANDBOX_PARTNER_KEY=${{ secrets.TAPPAY_SANDBOX_PARTNER_KEY }}"
@@ -120,8 +123,11 @@ jobs:
             --platform managed \
             --region ${REGION} \
             --allow-unauthenticated \
-            --port 8000 \
-            --memory 512Mi \
+            --port 8080 \
+            --memory 1Gi \
+            --cpu 1 \
+            --timeout 300 \
+            --concurrency 10 \
             --max-instances 1 \
             --min-instances 0 \
             --set-env-vars "${ENV_VARS}" \
@@ -181,7 +187,9 @@ jobs:
             --region ${REGION} \
             --allow-unauthenticated \
             --port 80 \
-            --memory 512Mi \
+            --memory 256Mi \
+            --cpu 500m \
+            --concurrency 1 \
             --max-instances 1 \
             --min-instances 0 \
             --labels "environment=preview,issue=${ISSUE}"
@@ -191,13 +199,125 @@ jobs:
           echo "url=${URL}" >> $GITHUB_OUTPUT
           echo "✅ Frontend deployed: ${URL}"
 
-  comment:
+  update-backend-frontend-url:
     runs-on: ubuntu-latest
     needs: [extract, deploy-backend, deploy-frontend]
+    if: success()
+    steps:
+      - uses: google-github-actions/auth@v2
+        with:
+          credentials_json: ${{ secrets.GCP_SA_KEY }}
+
+      - uses: google-github-actions/setup-gcloud@v2
+
+      - name: Update backend FRONTEND_URL with actual frontend URL
+        run: |
+          echo "🔄 Updating backend FRONTEND_URL..."
+          ISSUE=${{ needs.extract.outputs.issue_number }}
+          SERVICE="duotopia-preview-issue-${ISSUE}-backend"
+          FRONTEND_URL="${{ needs.deploy-frontend.outputs.url }}"
+
+          echo "📝 Frontend URL: ${FRONTEND_URL}"
+
+          # Update only the FRONTEND_URL environment variable
+          gcloud run services update "${SERVICE}" \
+            --platform managed \
+            --region ${{ env.REGION }} \
+            --update-env-vars "FRONTEND_URL=${FRONTEND_URL}"
+
+          echo "✅ Backend FRONTEND_URL updated to: ${FRONTEND_URL}"
+
+  cleanup-images:
+    runs-on: ubuntu-latest
+    needs: [extract, deploy-backend, deploy-frontend, update-backend-frontend-url]
+    if: success()
+    steps:
+      - uses: google-github-actions/auth@v2
+        with:
+          credentials_json: ${{ secrets.GCP_SA_KEY }}
+
+      - uses: google-github-actions/setup-gcloud@v2
+
+      - name: 🧹 Clean Old Images for This Issue
+        run: |
+          echo "🧹 Cleaning old images for Issue #${{ needs.extract.outputs.issue_number }}..."
+
+          KEEP_COUNT=1  # Keep only the latest version
+          REGISTRY="${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.REPOSITORY }}"
+          ISSUE="${{ needs.extract.outputs.issue_number }}"
+
+          # Services to clean for this issue
+          services=(
+            "duotopia-preview-issue-${ISSUE}-backend"
+            "duotopia-preview-issue-${ISSUE}-frontend"
+          )
+
+          total_deleted=0
+
+          for service in "${services[@]}"; do
+            echo "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
+            echo "📦 Service: $service"
+
+            FULL_PATH="${REGISTRY}/${service}"
+
+            # Get digests sorted by CREATE_TIME (newest first)
+            DIGESTS=$(gcloud artifacts docker images list "${FULL_PATH}" \
+              --sort-by="~CREATE_TIME" 2>&1 | grep "sha256:" | awk '{print $2}' || true)
+
+            if [ -z "$DIGESTS" ]; then
+              echo "   ℹ️  No images found"
+              continue
+            fi
+
+            TOTAL=$(echo "$DIGESTS" | wc -l | tr -d ' ')
+            echo "   📊 Total images: $TOTAL"
+
+            if [ "$TOTAL" -le "$KEEP_COUNT" ]; then
+              echo "   ✅ Already optimal ($TOTAL <= $KEEP_COUNT)"
+              continue
+            fi
+
+            # Keep the first KEEP_COUNT, delete the rest
+            DELETE_DIGESTS=$(echo "$DIGESTS" | tail -n +"$((KEEP_COUNT + 1))")
+            DELETE_COUNT=$(echo "$DELETE_DIGESTS" | wc -l | tr -d ' ')
+
+            echo "   ✅ Keeping $KEEP_COUNT newest image(s)"
+            echo "   🗑️  Deleting $DELETE_COUNT old image(s)..."
+
+            echo "$DELETE_DIGESTS" | while read -r digest; do
+              if [ -n "$digest" ]; then
+                IMAGE_URI="${FULL_PATH}@${digest}"
+                short_digest="${digest:7:12}"
+
+                if gcloud artifacts docker images delete "${IMAGE_URI}" --delete-tags --quiet 2>&1; then
+                  echo "      ✅ Deleted: ${short_digest}"
+                  total_deleted=$((total_deleted + 1))
+                else
+                  echo "      ⚠️  Failed: ${short_digest}"
+                fi
+              fi
+            done
+
+            echo ""
+          done
+
+          if [ $total_deleted -gt 0 ]; then
+            echo "✅ Cleaned up $total_deleted old image(s) for Issue #${ISSUE}"
+          else
+            echo "✅ No cleanup needed - already optimal"
+          fi
+
+  comment:
+    runs-on: ubuntu-latest
+    needs: [extract, deploy-backend, deploy-frontend, update-backend-frontend-url, cleanup-images]
     if: success()
     permissions:
       issues: write
     steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 2
+
       - uses: actions/github-script@v7
         env:
           ISSUE: ${{ needs.extract.outputs.issue_number }}
@@ -210,36 +330,77 @@ jobs:
             const backend = process.env.BACKEND;
             const sha = context.sha.substring(0, 7);
             const branch = context.ref.replace('refs/heads/', '');
+            const now = new Date().toLocaleString('zh-TW', { timeZone: 'Asia/Taipei' });
 
-            // Format timestamp in Taiwan timezone
-            const now = new Date();
-            const taiwanTime = now.toLocaleString('zh-TW', {
-              timeZone: 'Asia/Taipei',
-              year: 'numeric',
-              month: '2-digit',
-              day: '2-digit',
-              hour: '2-digit',
-              minute: '2-digit',
-              second: '2-digit'
-            });
+            // Get commit message
+            const { execSync } = require('child_process');
+            const commitMsg = execSync(`git log -1 --pretty=format:"%s"`, { encoding: 'utf-8' });
+            const commitBody = execSync(`git log -1 --pretty=format:"%b"`, { encoding: 'utf-8' }).trim();
+
+            // Generate smart change summary based on commit type
+            let changeSummary = '';
+            if (commitMsg.match(/^fix/i)) {
+              changeSummary = `🔧 本次修復：${commitMsg.replace(/^fix[:(]\s*/i, '')}`;
+            } else if (commitMsg.match(/^feat/i)) {
+              changeSummary = `✨ 新功能：${commitMsg.replace(/^feat[:(]\s*/i, '')}`;
+            } else if (commitMsg.match(/^refactor/i)) {
+              changeSummary = `♻️ 重構：${commitMsg.replace(/^refactor[:(]\s*/i, '')}`;
+            } else if (commitMsg.match(/^style/i)) {
+              changeSummary = `💄 樣式調整：${commitMsg.replace(/^style[:(]\s*/i, '')}`;
+            } else if (commitMsg.match(/^perf/i)) {
+              changeSummary = `⚡ 性能優化：${commitMsg.replace(/^perf[:(]\s*/i, '')}`;
+            } else if (commitMsg.match(/^test/i)) {
+              changeSummary = `✅ 測試更新：${commitMsg.replace(/^test[:(]\s*/i, '')}`;
+            } else if (commitMsg.match(/^docs/i)) {
+              changeSummary = `📝 文檔更新：${commitMsg.replace(/^docs[:(]\s*/i, '')}`;
+            } else {
+              changeSummary = `📝 ${commitMsg}`;
+            }
+
+            // Build comment body
+            const bodyParts = [
+              '✅ **部署完成！**',
+              '',
+              changeSummary
+            ];
+
+            // Add commit body if exists (detailed description)
+            if (commitBody && commitBody.length > 0) {
+              // Filter out common markers
+              const cleanBody = commitBody
+                .split('\n')
+                .filter(line => !line.includes('Generated with') && !line.includes('Co-Authored-By'))
+                .join('\n')
+                .trim();
+
+              if (cleanBody) {
+                bodyParts.push('');
+                bodyParts.push(cleanBody);
+              }
+            }
+
+            bodyParts.push(
+              '',
+              '**測試環境已更新**：',
+              `- 🌐 **Frontend**: ${frontend}`,
+              `- ⚙️ **Backend**: ${backend}`,
+              '',
+              '@kaddy-eunice 請測試最新版本',
+              '',
+              '**部署資訊**:',
+              `- 📝 Commit: \`${sha}\``,
+              `- 🔧 分支: \`${branch}\``,
+              `- ⏰ 部署時間: ${now}`,
+              '',
+              '💡 Min instances = 0 (閒置時不產生費用)',
+              '✍️ 測試完成後請回覆「測試通過」'
+            );
+
+            const body = bodyParts.join('\n');
 
             await github.rest.issues.createComment({
               owner: context.repo.owner,
               repo: context.repo.repo,
-              issue_number: issue,
-              body: `✅ **部署完成！**
-
-測試環境已更新：
-- 🌐 **Frontend**: ${frontend}
-- ⚙️ **Backend**: ${backend}
-
-@kaddy-eunice 請測試最新版本
-
-**部署資訊**:
-- 📝 Commit: \`${sha}\`
-- 🔧 分支: \`${branch}\`
-- ⏰ 部署時間: ${taiwanTime}
-
-💡 Min instances = 0 (閒置時不產生費用)
-✍️ 測試完成後請回覆「測試通過」`
+              issue_number: parseInt(issue),
+              body: body
             });
