fix: Add models/ directory to Dockerfile COPY commands
Problem:
- Dockerfile was missing COPY command for models/ directory
- Only copied *.py files, which doesn't include directories
- Container startup failed: ModuleNotFoundError: No module named 'models'

Solution:
- Add 'COPY model[s] ./models/' to Dockerfile
- Uses optional pattern model[s] to avoid errors if dir doesn't exist
- Now models package is properly included in container

This is the final fix for Cloud Run container startup failures.

Related commits:
- Removed conflicting models.py file (f5c840b)
- Fixed Casbin sync for missing tables (1361b94)
- Fixed Cloud Run config (a374bc1)

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -27,6 +27,7 @@ COPY *.py ./
 COPY alembic ./alembic/
 COPY alembic.ini ./
 # 複製其他目錄（如果存在）
+COPY model[s] ./models/
 COPY service[s] ./services/
 COPY router[s] ./routers/
 COPY route[s] ./routes/
