fix: Add config/ directory to Dockerfile for Casbin configuration files
- Fixes FileNotFoundError: Casbin model file not found: /app/config/casbin_model.conf
- Casbin requires casbin_model.conf and casbin_policy.csv for RBAC initialization
- This is deployment attempt #6 for feat/issue-112-org-hierarchy preview

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -35,6 +35,7 @@ COPY cor[e] ./core/
 COPY ap[i] ./api/
 COPY util[s] ./utils/
 COPY middlewar[e] ./middleware/
+COPY confi[g] ./config/
 
 # 複製 GCS service account key（如果存在）
 # 注意：Cloud Run 有預設認證，不需要額外的 key file
