--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -55,7 +55,7 @@ pytest==7.4.3
 pytest-asyncio==0.21.1
 pytest-cov==4.1.0
 pytest-xdist==3.5.0
-httpx==0.25.2
+httpx[http2]==0.25.2
 
 # Code Quality
 black==23.12.1
