--- a/.gitignore
+++ b/.gitignore
@@ -107,6 +107,19 @@ playwright-report/
 # Documentation files (payment related)
 docs/payment/
 
+# Local debug scripts (do not commit)
+backend/add_update_endpoint.sh
+backend/apply_changes.py
+backend/apply_content_fix.sh
+backend/apply_fix.sh
+backend/check_db.py
+backend/check_duplicate_lessons.sql
+backend/fix_content_create.py
+backend/patch_content_create.py
+backend/temp_add_endpoint.py
+backend/test_api_manual.py
+backend/test_duplicate_lesson.py
+
 # MCP Server screenshots and temporary files
 mcp-servers/browser/screenshots/
 *.screenshot.png
