chore: merge staging to resolve migration base conflicts
- Accept staging versions for all files
- CLAUDE.md: Use more complete migration rules
- backend files: Use staging's cleaner implementations
- i18n files: Use staging's complete translations
- TeacherTemplatePrograms: Use staging's feature-complete version

Preparing for migration squash in #112

--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -195,9 +195,25 @@ jobs:
         echo "🔄 Running Alembic database migrations..."
         cd backend
         echo "📊 Current migration status:"
-        alembic current
+        alembic current || true
+
         echo "🔄 Upgrading to latest migration..."
-        alembic upgrade head
+        if ! alembic upgrade head 2>&1 | tee /tmp/alembic_output.txt; then
+          # Check if error is due to orphaned revision
+          if grep -q "Can't locate revision" /tmp/alembic_output.txt; then
+            echo "⚠️ Orphaned revision detected in database"
+            echo "🔧 Stamping database to latest head to recover..."
+            # Get the current head from the codebase
+            CURRENT_HEAD=$(alembic heads | head -1 | awk '{print $1}')
+            echo "📌 Stamping to revision: $CURRENT_HEAD"
+            alembic stamp "$CURRENT_HEAD"
+            echo "✅ Database stamped successfully"
+          else
+            echo "❌ Migration failed with unexpected error"
+            cat /tmp/alembic_output.txt
+            exit 1
+          fi
+        fi
         echo "✅ Migrations completed"
 
     - name: Check for missing migrations
@@ -207,18 +223,12 @@ jobs:
         echo "🔍 Checking for uncommitted model changes..."
         cd backend
         if ! alembic check; then
-          if [[ "${{ github.ref }}" == "refs/heads/develop" || "${{ github.ref }}" == "refs/heads/staging" ]]; then
-            echo "⚠️ WARNING: Database schema differences detected"
-            echo "📝 This is expected - legacy tables/columns exist in DB but not in models"
-            echo "🔧 Minor differences (indexes, enum vs varchar, unused tables) are acceptable"
-            echo "✅ Continuing deployment..."
-          else
-            echo "❌ ERROR: Database models have changed but no migration was created!"
-            echo "📝 Please run the following command locally:"
-            echo "   alembic revision --autogenerate -m 'describe your changes'"
-            echo "   Then commit the generated migration file."
-            exit 1
-          fi
+          # Allow known legacy schema differences for all environments
+          # These are pre-existing differences (legacy tables, type mismatches) that don't affect functionality
+          echo "⚠️ WARNING: Database schema differences detected"
+          echo "📝 This is expected - legacy tables/columns exist in DB but not in models"
+          echo "🔧 Minor differences (indexes, enum vs varchar, unused tables) are acceptable"
+          echo "✅ Continuing deployment..."
         fi
         echo "✅ No pending model changes detected"
 
@@ -237,6 +247,7 @@ jobs:
             AND NOT rowsecurity
             AND tablename != 'alembic_version'
             AND tablename NOT IN (
+              -- Duotopia 業務表（使用 JWT auth，非 Supabase Auth）
               'teachers', 'students', 'classrooms', 'classroom_students',
               'programs', 'lessons', 'content', 'content_item', 'contents', 'content_items',
               'assignments', 'assignment_content', 'assignment_contents', 'student_assignments',
@@ -244,7 +255,21 @@ jobs:
               'subscription_periods', 'point_usage_logs',
               'teacher_subscription_transaction', 'teacher_subscription_transactions', 'invoice_status_history',
               'user_word_progress', 'practice_sessions', 'practice_answers',
-              'organizations', 'schools', 'teacher_organizations', 'teacher_schools', 'classroom_schools'
+              'organizations', 'schools', 'teacher_organizations', 'teacher_schools', 'classroom_schools', 'student_schools',
+              -- n8n 系統表（外部服務，不適用 RLS）
+              'annotation_tag_entity', 'auth_identity', 'auth_provider_sync_history', 'binary_data',
+              'chat_hub_agents', 'chat_hub_messages', 'chat_hub_sessions', 'credentials_entity',
+              'data_table', 'data_table_column', 'dynamic_credential_entry', 'dynamic_credential_resolver',
+              'event_destinations', 'execution_annotation_tags', 'execution_annotations', 'execution_data',
+              'execution_entity', 'execution_metadata', 'folder', 'folder_tag',
+              'insights_by_period', 'insights_metadata', 'insights_raw', 'installed_nodes', 'installed_packages',
+              'invalid_auth_token', 'migrations', 'oauth_access_tokens', 'oauth_authorization_codes',
+              'oauth_clients', 'oauth_refresh_tokens', 'oauth_user_consents', 'processed_data',
+              'project', 'project_relation', 'role', 'role_scope', 'scope', 'settings',
+              'shared_credentials', 'shared_workflow', 'tag_entity', 'test_case_execution', 'test_run',
+              'user', 'user_api_keys', 'variables', 'webhook_entity',
+              'workflow_dependency', 'workflow_entity', 'workflow_history', 'workflow_publish_history',
+              'workflow_statistics', 'workflows_tags'
             )
           ORDER BY tablename;
         " | xargs)
@@ -301,6 +326,9 @@ jobs:
         ENV_VARS="$ENV_VARS,SUPABASE_URL=${{ steps.db_env.outputs.SUPABASE_URL }}"
         ENV_VARS="$ENV_VARS,SUPABASE_KEY=${{ steps.db_env.outputs.SUPABASE_KEY }}"
         ENV_VARS="$ENV_VARS,OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }}"
+        ENV_VARS="$ENV_VARS,USE_VERTEX_AI=${{ vars.USE_VERTEX_AI || 'false' }}"
+        ENV_VARS="$ENV_VARS,VERTEX_AI_PROJECT_ID=$PROJECT_ID"
+        ENV_VARS="$ENV_VARS,VERTEX_AI_LOCATION=us-central1"
         ENV_VARS="$ENV_VARS,SMTP_HOST=${{ secrets.SMTP_HOST }}"
         ENV_VARS="$ENV_VARS,SMTP_PORT=${{ secrets.SMTP_PORT }}"
         ENV_VARS="$ENV_VARS,SMTP_USER=${{ secrets.SMTP_USER }}"
